<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search_hint"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_star"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="@string/star_priority_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter"
        android:title="@string/filter_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save_workout"
        android:title="@string/workout_export_action"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>