<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_back"
        android:icon="@drawable/ic_arrow_back_24"
        android:title="@string/action_back"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_move_up"
        android:icon="@drawable/ic_arrow_up_24"
        android:title="@string/action_move_up"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_move_down"
        android:icon="@drawable/ic_arrow_down_24"
        android:title="@string/action_move_down"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />

</menu>
