<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_workout_tracker">

    <fragment
        android:id="@+id/nav_workout_tracker"
        android:name="com.example.gymevo.ui.workoutTracker.WorkoutTrackerFragment"
        android:label="@string/menu_workout_tracker"
        tools:layout="@layout/fragment_workout_tracker" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.example.gymevo.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_exercises_list"
        android:name="com.example.gymevo.ui.exercisesList.ExerciseListFragment"
        android:label="@string/menu_exercises_list"
        tools:layout="@layout/fragment_exercises_list" />

    <fragment
        android:id="@+id/nav_workout_list"
        android:name="com.example.gymevo.ui.workoutsList.WorkoutListFragment"
        android:label="@string/menu_workouts_list"
        tools:layout="@layout/fragment_workouts_list" />

</navigation>